--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "4.0",
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
